Prior Documentation Completely read

--- a/notebooks/core.ipynb
+++ b/notebooks/core.ipynb
@@ -247,7 +247,7 @@
     "        else:\n",
     "            self.conversion_function = self.default_conversion_function\n",
     "```\n",
-    "- `evaluate_constraints`: Din't "
+    "- `evaluate_constraints`:  "
    ]
   }
  ],
